--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -56,6 +56,10 @@
 			<version>0.9-7</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-dbcp2</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
