--- a/vtl-transform/pom.xml
+++ b/vtl-transform/pom.xml
@@ -55,9 +55,17 @@
 			<artifactId>junit-jupiter-params</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-junit-jupiter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-slf4j-impl</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
 		</dependency>
 	</dependencies>
 
