--- a/RVTL/src/main/filtered/R/DESCRIPTION
+++ b/RVTL/src/main/filtered/R/DESCRIPTION
@@ -6,7 +6,7 @@ Maintainer: Attilio Mattiocco <attilio.mattiocco@bancaditalia.it>
 Description: R wrapper for VTL Engine
     More to be added.
 Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6
-Imports: RJSDMX (>= 2.3-3), igraph, networkD3, shiny, shinydashboard, shinyjs, jdx, xtable, dplyr
+Imports: RJSDMX (>= 2.3-3), igraph, networkD3, shiny, shinydashboard, shinyjs, jdx, xtable, dplyr, sortable
 Suggests: testthat
 SystemRequirements: Java (>= 8)
 License: EUPL
