Renamed some classes

--- a/vtl-launcher/pom.xml
+++ b/vtl-launcher/pom.xml
@@ -36,6 +36,10 @@
 
 	<dependencies>
 		<dependency>
+		    <groupId>org.openjdk.jol</groupId>
+		    <artifactId>jol-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-api</artifactId>
 		</dependency>
