isnull - nvl - match_characters transformations

--- a/pom.xml
+++ b/pom.xml
@@ -525,6 +525,11 @@
 						<autoReleaseAfterClose>true</autoReleaseAfterClose>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.5</version>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
