--- a/RVTL/src/main/filtered/R/DESCRIPTION
+++ b/RVTL/src/main/filtered/R/DESCRIPTION
@@ -1,13 +1,10 @@
 Package: ${project.artifactId}
 Version: ${r.package.version}
 Title: R Wrapper for VTL Engine
-Author: Attilio Mattiocco, Valentino Pinna, Banca d'Italia
-Maintainer: Valentino Pinna <valentino.pinna@bancaditalia.it>, Attilio Mattiocco <attilio.mattiocco@bancaditalia.it>
+Author: Valentino Pinna, Attilio Mattiocco, Banca d'Italia
+Maintainer: Valentino Pinna <valentino.pinna@bancaditalia.it>
 Description: R wrapper for VTL Engine
-    This package contains functions and a shiny UI for dealing 
-    with the Validation and Transformation Language v2.0.
-    More about VTL (and SDMX) 
-			 can be found at: <https://sdmx.org>.
+    This package contains functions and a shiny UI for dealing with the Validation and Transformation Language v2.1.
 Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6
 Imports: RJSDMX (>= 2.3-3), igraph, networkD3, shiny, shinydashboard, shinyjs, jdx, xtable, dplyr, sortable, DT
 Suggests: testthat
