--- a/vtl-parser/pom.xml
+++ b/vtl-parser/pom.xml
@@ -39,6 +39,10 @@
 			<groupId>org.antlr</groupId>
 			<artifactId>antlr4</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
