--- a/RVTL/src/main/filtered/R/DESCRIPTION
+++ b/RVTL/src/main/filtered/R/DESCRIPTION
@@ -4,7 +4,7 @@ Title: R Wrapper for VTL Engine
 Author: Valentino Pinna, Attilio Mattiocco, Banca d'Italia
 Maintainer: Valentino Pinna <valentino.pinna@bancaditalia.it>
 Description: R wrapper for VTL Engine
-    This package contains functions and a shiny UI for dealing with the Validation and Transformation Language v2.1.
+    This package contains functions and a shiny UI for dealing with the Validation and Transformation Language.
 Depends: R (>= 3.3.0), rJava (>= 0.8-8), R6
 Imports: RJSDMX (>= 2.3-3), igraph, networkD3, shiny, shinydashboard, shinyjs, jdx, xtable, dplyr, sortable, DT
 Suggests: testthat
