--- a/vtl-parser/pom.xml
+++ b/vtl-parser/pom.xml
@@ -95,6 +95,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<excludePackageNames>it.bancaditalia.oss.vtl.grammar</excludePackageNames>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
