--- a/vtl-envs/pom.xml
+++ b/vtl-envs/pom.xml
@@ -85,10 +85,16 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>com.esotericsoftware</groupId>
-		    <artifactId>kryo</artifactId>
-		    <version>4.0.2</version>
-		    <scope>test</scope>
+			<groupId>com.esotericsoftware</groupId>
+			<artifactId>kryo</artifactId>
+			<version>4.0.2</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.objenesis</groupId>
+					<artifactId>objenesis</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
