Enforced java version in pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -731,6 +731,9 @@
 						<configuration>
 							<rules>
 								<dependencyConvergence />
+								<requireJavaVersion>
+                  					<version>1.8.0_242</version>
+                				</requireJavaVersion>
 							</rules>
 						</configuration>
 						<goals>
