--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.0.6-SNAPSHOT</revision>
+		<revision>1.0.6</revision>
 		<sdmx.version>2.3.3</sdmx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
