--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
 <!--
 
     Copyright © 2020 Banca D'Italia
@@ -49,12 +50,14 @@
 
 	<developers>
 		<developer>
+			<id>AM</id>
 			<name>Attilio Mattiocco</name>
 			<email>attilio.mattiocco@bancaditalia.it</email>
 			<organization>Banca d'Italia</organization>
 			<organizationUrl>http://www.bancaditalia.it/</organizationUrl>
 		</developer>
 		<developer>
+			<id>VP</id>
 			<name>Valentino Pinna</name>
 			<email>valentino.pinna@bancaditalia.it</email>
 			<organization>Banca d'Italia</organization>
@@ -83,37 +86,17 @@
 			</activation>
 			<modules>
 				<module>vtl-api</module>
-				<module>vtl-cli</module>
+				<module>vtl-bundles</module>
 				<module>vtl-confman</module>
 				<module>vtl-coverage</module>
 				<module>vtl-domains</module>
+				<module>vtl-editor</module>
 				<module>vtl-engine</module>
 				<module>vtl-envs</module>
-				<module>vtl-launcher</module>
 				<module>vtl-parser</module>
-				<module>vtl-rest</module>
 				<module>vtl-session</module>
 				<module>vtl-transform</module>
 				<module>vtl-types</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>with-r</id>
-			<modules>
-				<module>vtl-editor</module>
-				<module>RVTL</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>with-python</id>
-			<modules>
-				<module>vtl-kernel</module>
-			</modules>
-		</profile>
-		<profile>
-			<id>with-spark</id>
-			<modules>
-				<module>vtl-spark</module>
 			</modules>
 		</profile>
 		<profile>
@@ -213,6 +196,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<bundle.plugin.version>5.1.1</bundle.plugin.version>
+		<tycho.version>2.1.0</tycho.version>
 		<slf4j.version>1.7.26</slf4j.version>
 		<log4j.version>2.13.3</log4j.version>
 		<jetty.version>9.4.31.v20200723</jetty.version>
@@ -295,6 +280,11 @@
 				<version>${antlr4.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.antlr</groupId>
+				<artifactId>antlr4-runtime</artifactId>
+				<version>${antlr4.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>jakarta.xml.bind</groupId>
 				<artifactId>jakarta.xml.bind-api</artifactId>
 				<version>2.3.2</version>
@@ -348,11 +338,6 @@
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss.vtl</groupId>
-				<artifactId>vtl-launcher</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-domains</artifactId>
 				<version>${project.version}</version>
 			</dependency>
@@ -365,12 +350,6 @@
 				<groupId>it.bancaditalia.oss.vtl</groupId>
 				<artifactId>vtl-session</artifactId>
 				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>it.bancaditalia.oss.vtl</groupId>
-				<artifactId>vtl-launcher</artifactId>
-				<version>${project.version}</version>
-				<classifier>complete</classifier>
 			</dependency>
 			<dependency>
 				<groupId>it.bancaditalia.oss</groupId>
@@ -707,14 +686,11 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>flatten-maven-plugin</artifactId>
-					<version>1.2.1</version>
-					<configuration>
-						<flattenMode>ossrh</flattenMode>
-					</configuration>
+					<version>1.2.5</version>
 					<executions>
 						<execution>
 							<id>flatten.flatten</id>
-							<phase>process-resources</phase>
+							<phase>validate</phase>
 							<goals>
 								<goal>flatten</goal>
 							</goals>
@@ -727,6 +703,9 @@
 							</goals>
 						</execution>
 					</executions>
+					<configuration>
+						<flattenMode>ossrh</flattenMode>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -785,6 +764,36 @@
 							<owner>${project.organization.name}</owner>
 						</properties>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.felix</groupId>
+					<artifactId>maven-bundle-plugin</artifactId>
+					<version>${bundle.plugin.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-maven-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-compiler-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-p2-publisher-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>tycho-packaging-plugin</artifactId>
+					<version>${tycho.version}</version>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.tycho</groupId>
+					<artifactId>target-platform-configuration</artifactId>
+					<version>${tycho.version}</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
