--- a/vtl-parser/pom.xml
+++ b/vtl-parser/pom.xml
@@ -25,7 +25,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>vtl-parser</artifactId>
-	<packaging>jar</packaging>
+	<packaging>bundle</packaging>
 
 	<parent>
 		<groupId>it.bancaditalia.oss.vtl</groupId>
@@ -62,7 +62,7 @@
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-maven-plugin</artifactId>
 				<version>${antlr4.version}</version>
-				<executions>
+			<executions>
 					<execution>
 						<phase>generate-sources</phase>
 						<goals>
@@ -102,6 +102,11 @@
 					<excludePackageNames>it.bancaditalia.oss.vtl.grammar</excludePackageNames>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<extensions>true</extensions>
+			</plugin>			
 		</plugins>
 	</build>
 </project>
