--- a/vtl-bundles/vtl-r/vtl-editor/src/main/resources/package.json
+++ b/vtl-bundles/vtl-r/vtl-editor/src/main/resources/package.json
@@ -18,9 +18,11 @@
 		"codemirror": "^5.49.0",
 		"lodash.merge": "^4.6.2"
 	},
-	"devDependencies": {
-		"antlr4-editor": "1.0.77",
-		"browserify": "^16.5.0",
-		"js-beautify": "^1.10.2"
-	}
+        "devDependencies": {
+                "antlr4-editor": "1.0.77",
+                "lodash": "4.17.11",
+                "antlr4": "4.7.2",
+                "browserify": "^16.5.0",
+                "js-beautify": "^1.10.2"
+        }
 }
