--- a/vtl-bundles/vtl-cli/pom.xml
+++ b/vtl-bundles/vtl-cli/pom.xml
@@ -43,6 +43,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-bundle-deps</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>info.picocli</groupId>
 			<artifactId>picocli</artifactId>
 			<version>4.3.2</version>
