--- a/vtl-bundles/pom.xml
+++ b/vtl-bundles/pom.xml
@@ -42,31 +42,13 @@
 			<id>with-cli</id>
 			<modules>
 				<module>vtl-cli</module>
-				<module>vtl-confman</module>
 			</modules>
-			<dependencies>
-				<dependency>
-					<groupId>it.bancaditalia.oss.vtl</groupId>
-					<artifactId>vtl-bundle-deps</artifactId>
-					<version>${project.version}</version>
-					<type>pom</type>
-				</dependency>
-			</dependencies>
 		</profile>
 		<profile>
 			<id>with-rest</id>
 			<modules>
 				<module>vtl-rest</module>
-				<module>vtl-confman</module>
 			</modules>
-			<dependencies>
-				<dependency>
-					<groupId>it.bancaditalia.oss.vtl</groupId>
-					<artifactId>vtl-bundle-deps</artifactId>
-					<version>${project.version}</version>
-					<type>pom</type>
-				</dependency>
-			</dependencies>
 		</profile>
 		<profile>
 			<id>with-r</id>
@@ -80,10 +62,15 @@
 				<module>vtl-kernel</module>
 			</modules>
 		</profile>
+		<profile>
+			<id>with-eclipse</id>
+			<modules>
+				<module>vtl-eclipse</module>
+			</modules>
+		</profile>
 	</profiles>
 
 	<modules>
 		<module>vtl-bundle-deps</module>
-		<module>vtl-eclipse</module>
 	</modules>
 </project>
