--- a/vtl-bundles/vtl-rest/pom.xml
+++ b/vtl-bundles/vtl-rest/pom.xml
@@ -43,6 +43,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>it.bancaditalia.oss.vtl</groupId>
+			<artifactId>vtl-bundle-deps</artifactId>
+			<version>${project.version}</version>
+			<type>pom</type>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<exclusions>
