--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
 	</profiles>
 
 	<properties>
-		<revision>1.0.7-SNAPSHOT</revision>
+		<revision>1.0.7</revision>
 		<sdmx.version>2.3.3</sdmx.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
