--- a/vtl-coverage/pom.xml
+++ b/vtl-coverage/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>it.bancaditalia.oss.vtl</groupId>
 			<artifactId>vtl-bundle-deps</artifactId>
-			<version>1.0.7-SNAPSHOT</version>
+			<version>${project.version}</version>
 			<type>pom</type>
 		</dependency>
 	</dependencies>
